fixed admin page visibility

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -148,6 +148,12 @@ h4 {
 .rest-menu-form {
   margin-right: 0.5rem;
 }
+.form-border {
+  margin-top: 4rem;
+  border: 1px solid #2ec4b6;
+  border-radius: 0.3rem;
+  padding: 1rem;
+}
 
 @media (max-width: 767px) {
   .rest-menu-col-price {
@@ -224,12 +230,6 @@ h4 {
 }
 
 /* Rstaurant Menu Page */
-.add-menu-form {
-  margin-top: 4rem;
-  border: 1px solid #2ec4b6;
-  border-radius: 0.3rem;
-  padding: 1rem;
-}
 .no-result {
   font-size: 1.4rem;
   color: #2ec4b6;
